version-23.1/manage/shared/tiered-storage/_configuration-properties.mdx
import TunableClusterProperty from '../tiered-storage/_tunable-cluster-props.mdx'
import ClusterProperty from '../tiered-storage/_cluster-props.mdx'
import NodeProperty from '../tiered-storage/_node-props.mdx'

The following list contains cluster-level configuration properties for Tiered Storage. Configure or verify the following properties before you use Tiered Storage:

| Property      | Description |
| ----------- | ----------- |
| <ClusterProperty name="cloud_storage_enabled" frontmatter={props.frontmatter}/> | Global property that enables Tiered Storage. <br/>Set to true to enable Tiered Storage. Default is false.  |
| <ClusterProperty name="cloud_storage_region" frontmatter={props.frontmatter}/> | Object storage region. <br/>Required for AWS and GCS. |
| <ClusterProperty name="cloud_storage_bucket" frontmatter={props.frontmatter}/> | AWS or GCS bucket name. <br/>Required for AWS and GCS. |
| <ClusterProperty name="cloud_storage_credentials_source" frontmatter={props.frontmatter}/> | AWS or GCS instance metadata. <br/>Required for AWS and GCS authentication with IAM roles. |
| <ClusterProperty name="cloud_storage_access_key" frontmatter={props.frontmatter}/>| AWS or GCS access key. <br/>Required for AWS and GCS authentication with access keys. |
| <ClusterProperty name="cloud_storage_secret_key" frontmatter={props.frontmatter}/> | AWS or GCS secret key. <br/>Required for AWS and GCS authentication with access keys.  |
| <ClusterProperty name="cloud_storage_api_endpoint" frontmatter={props.frontmatter}/> | AWS or GCS API endpoint. <br/>- For AWS, this can be left blank. It’s generated automatically using the region and bucket. <br/>- For GCS, use `storage.googleapis.com`. |
| <ClusterProperty name="cloud_storage_azure_container" frontmatter={props.frontmatter}/> | Azure container name. <br/>Required for ABS. |
| <ClusterProperty name="cloud_storage_azure_storage_account" frontmatter={props.frontmatter}/> | Azure account name. <br/>Required for ABS. |
| <ClusterProperty name="cloud_storage_azure_shared_key" frontmatter={props.frontmatter}/> | Azure shared key. <br/>Required for ABS. |
| <ClusterProperty name="cloud_storage_cache_size" frontmatter={props.frontmatter}/> | Maximum size of the disk cache used by Tiered Storage. Default is 20 GiB. |

In addition, you might want to change the following node property for each broker:

| Property      | Description |
| ----------- | ----------- |
| <NodeProperty name="cloud_storage_cache_directory" frontmatter={props.frontmatter}/> | The directory for the Tiered Storage cache. You must specify the full path. Default is: `<redpanda-data-directory>/cloud_storage_cache.` |

You may want to configure the following properties:

| Property      | Description |
| ----------- | ----------- |
| <ClusterProperty name="cloud_storage_max_connections" frontmatter={props.frontmatter}/> | The maximum number of connections to object storage on a broker for each CPU. Remote read and remote write share the same pool of connections. This means that if a connection is used to upload a segment, it cannot be used to download another segment. If this value is too small, some workloads might starve for connections, which results in delayed uploads and downloads. If this value is too large, Redpanda tries to upload a lot of files at the same time and might overwhelm the system. Default is 20. |
| <TunableClusterProperty name="cloud_storage_initial_backoff_ms" frontmatter={props.frontmatter}/> | The time, in milliseconds, for an initial backoff interval in the exponential backoff algorithm to handle an error. Default is 100 ms. |
| <TunableClusterProperty name="cloud_storage_segment_upload_timeout_ms" frontmatter={props.frontmatter}/> | Timeout for segment upload. Redpanda retries the upload after the timeout. Default is 30000 ms. |
| <TunableClusterProperty name="cloud_storage_manifest_upload_timeout_ms" frontmatter={props.frontmatter}/> | Timeout for manifest upload. Redpanda retries the upload after the timeout. Default is 10000 ms. |
| <TunableClusterProperty name="cloud_storage_max_connection_idle_time_ms" frontmatter={props.frontmatter}/> | The maximum idle time for persistent HTTP connections. Differs depending on the object storage provider. Default is 5000 ms, which is sufficient for most providers. |
| <TunableClusterProperty name="cloud_storage_segment_max_upload_interval_sec" frontmatter={props.frontmatter}/> | Sets the number of seconds for idle timeout. If this property is empty, Redpanda uploads metadata to the object storage, but the segment is not uploaded until it reaches the `segment.bytes` size. By default, the property is empty. |
| <TunableClusterProperty name="cloud_storage_cache_check_interval" frontmatter={props.frontmatter}/> | The time, in milliseconds, between cache checks. The size of the cache can grow quickly, so it’s important to have a small interval between checks, but if the checks are too frequent, they consume a lot of resources. Default is 30000 ms. |
| <TunableClusterProperty name="cloud_storage_idle_timeout_ms" frontmatter={props.frontmatter}/> | The width of the sliding window for the moving average algorithm that calculates object storage utilization. Default is 10 seconds. |
| <TunableClusterProperty name="cloud_storage_idle_threshold_rps" frontmatter={props.frontmatter}/> | The utilization threshold for object storage housekeeping. Object storage is considered idle if, during the last 10 seconds, there were 10 or less object storage API requests. Default is 1 request per second.  |
| <TunableClusterProperty name="cloud_storage_enable_segment_merging" frontmatter={props.frontmatter}/>  | Enables adjacent segment merging on all segments in object storage that are smaller than the threshold. Two properties control this behavior: <TunableClusterProperty name="cloud_storage_segment_size_target" frontmatter={props.frontmatter}/> and <TunableClusterProperty name="cloud_storage_segment_size_min" frontmatter={props.frontmatter}/>. Default is enabled. |
| <TunableClusterProperty name="cloud_storage_segment_size_target" frontmatter={props.frontmatter}/>| The desired segment size in object storage. The default segment size is controlled by <TunableClusterProperty name="log_segment_size" frontmatter={props.frontmatter}/> and the `segment.bytes` topic configuration property. This property can be set to a value larger than this default segment size, but because that triggers a lot of segment reuploads, it's not recommended. |
| <TunableClusterProperty name="cloud_storage_segment_size_min" frontmatter={props.frontmatter}/> | The smallest segment size in object storage that Redpanda keeps. Default is 50% of log segment size. |

Under normal circumstances, you should not need to configure the following tunable properties:

| Property      | Description |
| ----------- | ----------- |
| <TunableClusterProperty name="cloud_storage_upload_ctrl_update_interval_ms" frontmatter={props.frontmatter}/> | The recompute interval for the upload controller. Default is 60000 ms. |
| <TunableClusterProperty name="cloud_storage_upload_ctrl_p_coeff" frontmatter={props.frontmatter}/> | The proportional coefficient for the upload controller. Default is -2. |
| <TunableClusterProperty name="cloud_storage_upload_ctrl_d_coeff" frontmatter={props.frontmatter}/> | The derivative coefficient for the upload controller. Default is 0. |
| <TunableClusterProperty name="cloud_storage_upload_ctrl_min_shares" frontmatter={props.frontmatter}/> | The minimum number of I/O and CPU shares that the remote write process can use. Default is 100. |
| <TunableClusterProperty name="cloud_storage_upload_ctrl_max_shares" frontmatter={props.frontmatter}/> | The maximum number of I/O and CPU shares that the remote write process can use. Default is 1000. |
| <ClusterProperty name="cloud_storage_disable_tls" frontmatter={props.frontmatter}/> | Disables TLS encryption. Set to true if TLS termination is done by the proxy, such as HAProxy. Default is false.  |
| <ClusterProperty name="cloud_storage_api_endpoint_port" frontmatter={props.frontmatter}/> | Overrides the default API endpoint port. Default is 443. |
| <ClusterProperty name="cloud_storage_trust_file" frontmatter={props.frontmatter}/> | The public certificate used to validate the TLS connection to object storage. If this is empty, Redpanda uses your operating system's CA cert pool. |
| <TunableClusterProperty name="cloud_storage_reconciliation_interval_ms" frontmatter={props.frontmatter}/> | Deprecated. <br/><br/> The interval, in milliseconds, to reconcile partitions that need to be uploaded. A long reconciliation interval can result in a delayed reaction to topic creation, topic deletion, or leadership rebalancing events. A short reconciliation interval guarantees that new partitions are picked up quickly, but the process uses more resources. Default is 10000 ms. |
